--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,17 @@
 .DS_Store
 bin
 target
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/dictionaries
+classes/
+idea/
+.idea/
+.idea/*
+protocols/protocols.iml
+protocols/samples/*.json
+target
+.vagrant
+.idea
+.idea_modules
+*.pyc
+*.iml
+*.docker.tag
+*.idea
